packages/svelte/tests/validator/samples/const-tag-invalid-rune-usage/input.svelte
{#snippet test()}
	{@const der = $derived(0)}
{/snippet}