packages/svelte/tests/compiler-errors/samples/snippet-ts-annotation-no-lang/main.svelte
{#snippet bar(text: string)}
	{text}
{/snippet}
